Preparion for uploading to lms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,14 +5,17 @@ project(archiver)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-add_executable(archiver
-    main.cpp
-    src/suffix_tree.cpp
-    src/bwt.cpp
-    src/mtf.cpp
-    src/rle.cpp
-    src/huffman.cpp)
+# add_executable(archiver
+#     main.cpp
+#     src/suffix_tree.cpp
+#     src/bwt.cpp
+#     src/mtf.cpp
+#     src/rle.cpp
+#     src/huffman.cpp)
 
-include_directories(include)
+add_executable(archiver
+    contest.cpp)
+
+# include_directories(include)
 
 
